# Change Log
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/)
and this project adheres to [Semantic Versioning](http://semver.org/).

## [Unreleased]
### Added
- Add half-decent usage
- Add a 'validate' subcommand
- Add a 'list' subcommand
- Add an optional 'file_format' field referring back to this repo

## [0.1.2] - 2016-09-02
### Fixed
- Fixed (for realz) schema file reference

## [0.1.1] - 2016-09-01
### Fixed
- Fixed case of schema file reference so 'maintainers' works as a gem
- Added a MAINTAINERS file

## 0.1.0 - 2016-09-01
### Added
- Initial support for a json format for MAINTAINERS

[Unreleased]: https://github.com/puppetlabs/maintainers/compare/0.1.2...HEAD
[0.1.2]: https://github.com/puppetlabs/maintainers/compare/0.1.1...0.1.2
[0.1.1]: https://github.com/puppetlabs/maintainers/compare/0.1.0...0.1.1