@@ -3,6 +3,7 @@
 
 require 'json'
 require 'json-schema'
+require 'octokit'
 
 module Maintainers
   # Runner entry point
@@ -12,6 +13,9 @@ module Maintainers
 
       # for now just assume it's always MAINTAINERS
       options[:filename] ||= 'MAINTAINERS'
+
+      # for now just assume it's always puppetlabs
+      options[:org] ||= 'puppetlabs'
     end
 
     # Run, Lola, Run
@@ -28,6 +32,8 @@ module Maintainers
         list(@options)
       when 'validate'
         validate(@options)
+      when 'report'
+        report(@options)
       end
     end
 
@@ -39,11 +45,11 @@ module Maintainers
       JSON.parse(File.read(schema_path))
     end
 
-    def validate_json(maintainers)
+    def validate_json(maintainers, quiet = false)
       begin
         JSON::Validator.validate!(maintainers_schema, maintainers)
       rescue JSON::Schema::ValidationError => e
-        puts e
+        puts e unless quiet
         false
       end
     end
@@ -146,6 +152,65 @@ module Maintainers
         puts "There's something wrong with #{filename}"
         exit 1
       end
+    end
+
+    def report(options)
+      puts "Ok, hang tight, this may take a while as I query github ..."
+      client = Octokit::Client.new(:access_token => ENV['GITHUB_TOKEN'], :auto_paginate => true)
+
+      repos = client.org_repos(options[:org])
+
+      puts "Found a total of #{repos.count} #{options[:org]} repos"
+
+      # For now hardwire some arbitrary filters to help narrow down the
+      # number of repos reported on (and thus github API calls):
+      # - ignore repos with < 5 forks
+      # - ignore repos on a blocklist
+      # There are pretty arbitrary lines, so could be parameterized (or dropped).
+
+      lightly_forked_repos, repos = repos.partition { |repo| repo.forks < 5 }
+
+      blocklist = [
+        'puppetlabs-modules',
+        'courseware',
+        'courseware-virtual',
+        'showoff',
+        'education-builds',
+        'robby3',
+        'pltraining-classroom',
+        'pltraining-bootstrap',
+        'sfdc_reporting',
+        'tse-control-repo',
+        'puppet-quest-guide',
+        'courseware-lvm',
+      ]
+
+      blocklisted_repos, repos = repos.partition { |repo| blocklist.include? repo.name }
+
+      no_maintainers_file_repos, repos = repos.partition { |repo|
+        begin
+          contents = client.contents("#{options[:org]}/#{repo.name}", :path => 'MAINTAINERS')
+        rescue Octokit::NotFound
+        end
+
+        contents.nil?
+      }
+
+      unrecognized_maintainers_file_repos, repos = repos.partition { |repo|
+        contents = client.contents("#{options[:org]}/#{repo.name}", :path => 'MAINTAINERS')
+        # the file content is base64 encoded with some '\n's sprinkled in.
+        # the split.join maneuver below strips out those '\n' sprinkles.
+        maintainers = Base64.decode64(contents[:content].split.join)
+
+        !validate_json(maintainers, true)
+      }
+
+      puts "Skipped #{lightly_forked_repos.count} repos with fewer than 5 forks" if lightly_forked_repos
+      puts "Skipped #{blocklisted_repos.count} repos on a blocklist" if blocklisted_repos
+      puts "Skipped #{no_maintainers_file_repos.count} without a MAINTAINERS file" if no_maintainers_file_repos
+      puts "Skipped #{unrecognized_maintainers_file_repos.count} with a MAINTAINERS file in a different format" if unrecognized_maintainers_file_repos
+      puts "Found #{repos.count} repos with MAINTAINERS files"
+
     end
 
   end
